--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html lang="pt-r">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
-</html>
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <title>A história de Airn </title>
+    <title> historia da jovem astronomo </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,56 +13,39 @@
 
         <div class="passo ativo" id="passo-0">
             <img src="" alt="">
-            <p> Você é Arin, um jovem aprendiz de magia que vive em um vilarejo escondido entre as montanhas. Numa noite
-                de lua cheia, o mestre da vila o chama e revela que o Cristal da Vida, um artefato antigo que mantém a
-                floresta e os rios vivos, foi roubado. Sem ele, toda a região vai começar a definhar.
-                O mestre entrega a você um cajado simples e um mapa inacabado, e diz: — Arin, só você pode encontrar o
-                Cristal antes que seja tarde demais.
-                Você respira fundo e parte em sua jornada. </p>
-            <button class="btn-proximo" data-proximo="1"> Seguir pela Floresta Sombria, onde dizem que espíritos antigos
-                guardam segredos esquecidos.</button>
-            <button class="btn-proximo" data-proximo="2"> Seguir pela Montanha de Fogo, onde vive um dragão que talvez
-                saiba quem roubou o cristal.</button>
+            uma jovem astrônoma que trabalha em uma estação de pesquisa isolada no topo de uma montanha. É uma noite particularmente fria e silenciosa. De repente, o painel de controle principal acende-se em vermelho, e um alarme estridente rompe o silêncio. Um objeto não identificado, incrivelmente rápido e com uma assinatura de energia nunca antes vista, está se aproximando da Terra. </p>
+            Você se aproxima da tela principal e vê a imagem. Não é um asteroide, nem um meteoro. É uma estrutura gigantesca e luminosa, com padrões que parecem estar vivos, girando no espaço. Parece uma Nebulosa Despertada
+            <button class="btn-proximo" data-proximo="1">A prioridade é alertar o mundo. Você corre para a sala de rádio, esperando encontrar uma frequência alternativa, mesmo sabendo que a estrutura está causando uma interferência massiva.
+                guarde as informaçãos.</button>
+            <button class="btn-proximo" data-proximo="2">Você sente que entender o objeto é a chave para a sobrevivência. Você mergulha nos dados do telescópio, tentando decifrar sua composição e intenção.
+            </button></button>
         </div>
 
         <div class="passo" id="passo-1">
             <img src="" alt="">
-            <p> Você entra na floresta, onde a neblina cobre o chão e os galhos parecem sussurrar seu nome. Após horas
-                de caminhada, surge uma clareira iluminada por vaga-lumes azuis. No centro dela, há uma pedra brilhante,
-                mas você sente uma energia estranha. 
-                De repente, um espírito guardião aparece e fala: — Jovem aprendiz, para continuar precisa provar seu
-                valor. </p>
-            <button class="btn-proximo" data-proximo="3"> Aceitar o desafio do espírito, que pede para você resolver um
-                enigma antigo.</button>
-            <button class="btn-proximo" data-proximo="4"> Ignorar o espírito e pegar a pedra brilhante à força,
+            <p> Você corre para a sala de rádio, ignorando os protestos aterrorizados do Dr. Thorne. O ar está pesado, crepitando com a estática violenta gerada pela Nebulosa. Os monitores estão cheios de ruído branco, mas você sabe que existe um antigo canal de emergência, uma frequência de banda larga que raramente é usada e que pode estar menos saturada.. </p>
+            <button class="btn-proximo" data-proximo="3"> A sobrecarga de energia é perigosa e pode fritar os poucos equipamentos que ainda funcionam. Você pode ter estabelecido contato, mas a segurança da estação é a prioridade agora. (Você prioriza a segurança física e a preservação do equipamento.).</button>
+            <button class="btn-proximo" data-proximo="4"> Se a Nebulosa está enviando informações, você precisa capturá-las. Você rapidamente conecta um disco rígido blindado ao sistema de recepção para tentar absorver a carga de dados, arriscando a destruição do rádio. (Você prioriza a coleta de informações, não importa o custo.),
                 arriscando as consequências.</button>
         </div>
 
         <div class="passo" id="passo-2">
             <img src="" alt="">
-            <p> Você sobe a trilha íngreme da montanha. O calor aumenta a cada passo e o ar cheira a enxofre. No topo,
-                encontra uma caverna de pedras vermelhas, iluminada por lava. Lá dentro, um enorme dragão de escamas
-                douradas abre os olhos.
-                Ele não parece hostil, mas sua voz ecoa como trovão: — Humano… ousa me incomodar em meu descanso? </p>
-            <button class="btn-proximo" data-proximo="5"> Conversar com o dragão e pedir ajuda para encontrar o Cristal
-                da Vida.</button>
-            <button class="btn-proximo" data-proximo="6"> Tentar roubar uma pedra mágica do tesouro enquanto o dragão
-                observa, esperando que ela ajude em sua missão.</button>
+            <p> Você aperta os dentes, ignorando os arcos de eletricidade estática que pulam dos painéis. O Dr. Thorne grita, mas você já está conectando o disco rígido blindado ao sistema de recepção. "Vamos ver o que essa coisa quer!" você murmura.</p>
+            <button class="btn-proximo" data-proximo="5"> Você acredita que a "chave" é um enigma científico que, se resolvido, revelará a verdadeira natureza e intenção da Nebulosa. (Você prioriza a abordagem intelectual e o uso da ciência.)</button>
+            <button class="btn-proximo" data-proximo="6"> Você acredita que eles esperam um sinal de reconhecimento e que a hostilidade pode ser evitada com um gesto de paz. (Você prioriza a abordagem diplomática e o primeiro contato.)</button>
         </div>
 
         <div class="passo" id="passo-3">
             <img src="" alt="">
-            <p> O espírito faz a pergunta:"Sou a chave que abre qualquer porta, mas não tenho forma. O que sou?" </p>
-            <button class="btn-proximo" data-proximo="7"> A palavra. </button>
-            <button class="btn-proximo" data-proximo="10"> Chave mestra </button>
+            <p> Você sente que o tempo para a análise profunda se esgotou. A Nebulosa está esperando uma resposta. Você acredita que a diplomacia, o primeiro gesto de reconhecimento, é o caminho mais seguro para evitar um mal-entendido catastrófico." </p>
+            <button class="btn-proximo" data-proximo="5"> Você precisa documentar o ambiente interno e, se houver vida, obter uma amostra. Você prioriza a coleta científica de dados de contato. (Você se arrisca a entrar, focando na ciência.). </button>
+            <button class="btn-proximo" data-proximo="6"> A segurança é a prioridade. Você pode observar o que está dentro da esfera sem se expor a um perigo desconhecido. (Você prioriza a segurança, mantendo a observação à distância.)</button>
         </div>
 
         <div class="passo" id="passo-4">
             <img src="" alt="">
-            <p> Você ignora os avisos e toca na pedra. Imediatamente, raízes vivas se enrolam em suas pernas e braços. O
-                espírito grita:"A ganância tem um preço!"
-                Ninguem te escuta, nada se move naquele lugar... O tempo passa, você presa e com fome.
-                Nunca mais se escutou sobre a maga Arin </p>
+            <p> Quando o drone se posiciona para filmar o cristal, uma das esferas flutuantes se move. Não é uma reação de defesa; é um movimento suave, quase convidativo. A esfera se eleva e se dirige à lente da câmera do drone. </p>
 
         </div>
 
@@ -88,21 +59,19 @@
 
         <div class="passo ativo" id="passo-6">
             <img src="" alt="">
-            <p> Enquanto o dragão fala, você tenta pegar uma das pedras reluzentes. Mas assim que a toca, ela gruda na
-                sua mão como se estivesse viva! O dragão ruge:"Traidor insolente!". O rugido do dragão foi a ultima
-                coisa que escutamos de dentro da cova onde estava Arin, nunca mais se escutou falar da maga mais
-                poderosa do mundo. </p>
+            <p> De repente, a esfera projeta um feixe de luz suave que se materializa no ar dentro da sala de controle da sua estação! O feixe não é destrutivo; é como um projetor holográfico.
+
+                No ar, à sua frente, surge uma imagem tridimensional e translúcida da Nebulosa.. </p>
 
         </div>
 
         <div class="passo ativo" id="passo-7">
             <img src="" alt="">
-            <p> O espírito sorri e abre um portal. Você atravessa e chega a um santuário antigo, iluminado por cristais
-                azuis. Lá, uma inscrição na parede revela:"O Cristal da Vida não foi roubado. Ele busca um coração puro
-                para despertar seu verdadeiro poder."
-                Enquanto você lê, um golem de pedra se ergue diante do altar. Ele não ataca, mas bloqueia o caminho.
+            <p> A ideia de abandonar a Terra é dolorosa, mas a garantia de sobrevivência e um novo começo em um sistema estelar intacto é um presente que você sente que não pode ser ignorado. A humanidade carrega muitos fardos e problemas neste planeta; talvez uma nova tela seja o que precisamos.
+
+                "Dr. Thorne, a Terra sempre estará aqui," você declara, seus olhos fixos na imagem do portal. "Mas se podemos garantir a sobrevivência da nossa espécie, se podemos começar de novo sem o peso das nossas antigas divisões, devemos fazê-lo. Escolhemos o novo lar."
             </p>
-            <button class="btn-proximo" data-proximo="9">Usar sua magia contra o golem para forçar passagem.</button>
+            <button class="btn-proximo" data-proximo="9">Você sugere a Houston que apenas a sua estação de pesquisa seja enviada primeiro através do portal, como uma sonda inicial para confirmar a habitabilidade e a segurança do novo sistema. Isso minimiza o risco, mas atrasa a migração global.</button>
             <button class="btn-proximo" data-proximo="4"> Tentar dialogar com o golem, mostrando que é digno.</button>
         </div>
 
